--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -20,4 +20,8 @@ spring:
 shoplyst:
   app:
     jwtSecret: 'quickfoxranoverthedogandslammedthedoorshut'
-    jwtExpirationInMs: 86400000
+    jwtExpirationMs: 86400000
+
+app:
+  cors:
+    allowedOrigins:
