--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -18,9 +18,11 @@ spring:
       show-sql: 'true'
 
   flyway:
-    user: ${spring.datasource.username}
-    password: ${spring.datasource.password}
-    schemas: users
+    user: 'saucekode'
+    password: 'soft234#'
+    locations: 'classpath:db/migration'
+    enabled: true
+    url: 'jdbc:postgres://saucekode:soft234#@localhost:5432/users'
 
 shoplyst:
   app:
