--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,6 @@ target
 secrets.yml
 .gradletasknamecache
 .sts4-cache
-resources/application-dev.yml
-resources/application-prod.yml
-resources/application.yml
+application-dev.yml
+application-prod.yml
+application.yml
