created util for snake case naming strategy

--- a/user/pom.xml
+++ b/user/pom.xml
@@ -52,5 +52,10 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.shoplyst.app</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
