--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
 
     <module>user</module>
+    <module>utils</module>
   </modules>
 
   <name>shoplyst</name>
@@ -68,13 +69,6 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>8.5.8</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>2.1.212</version>
-      <scope>test</scope>
     </dependency>
 
     <dependency>
