--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,15 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.shoplyst.app</groupId>
-  <artifactId>shoplyst</artifactId>
+  <groupId>com.moove.app</groupId>
+  <artifactId>moove</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
-
     <module>user</module>
-    <module>utils</module>
   </modules>
 
-  <name>shoplyst</name>
+  <name>moove</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
